--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,22 @@
-[project]
+[tool.poetry]
 name = "MDANCE"
-version = "0.1.1"
-authors = [
-  { name="Lexin Chen", email="lxchen017@gmail.com" },
-]
+version = "0.1.2"
 description = "flexible n-ary clustering package for all applications."
+authors = ["Lexin Chen <lxchen017@gmail.com>"]
 readme = "README.md"
-requires-python = ">=3.8"
+homepage = "https://github.com/mqcomplab/MDANCE"
+repository = "https://github.com/mqcomplab/MDANCE"
+documentation = "https://github.com/mqcomplab/MDANCE/tree/main/tutorials"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
 
-[project.urls]
-Homepage = "https://github.com/mqcomplab/MDANCE"
-Issues = "https://github.com/mqcomplab/MDANCE/issues"
+[tool.poetry.dependencies]
+python = "^3.9"
+numpy = ">=1.20.0"
+scikit-learn = ">=0.24.0"
+MDAnalysis = ">=2.0.0"
+ShapeGMM = ">=1.0.0"
+torch = ">=1.8.0"
