update for mdance 0.1.6

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,25 @@
-[tool.poetry]
+[project]
 name = "MDANCE"
-version = "0.1.2"
-description = "flexible n-ary clustering package for all applications."
-authors = ["Lexin Chen <lxchen017@gmail.com>"]
+version = "0.1.6"
+authors = [
+  { name="Lexin Chen", email="le.chen@ufl.edu" },
+]
+description = "a flexible n-ary clustering package for all applications."
 readme = "README.md"
-homepage = "https://github.com/mqcomplab/MDANCE"
-repository = "https://github.com/mqcomplab/MDANCE"
-documentation = "https://github.com/mqcomplab/MDANCE/tree/main/tutorials"
+requires-python = ">=3.8"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
+dependencies = [
+  'numpy >= 1.20.0',
+  'scikit-learn >= 0.24.0',
+  'MDAnalysis >= 2.0.0',
+  'shapeGMMTorch >= 1.0.0',
+  'torch >= 1.8.0',
+]
 
-[tool.poetry.dependencies]
-python = "^3.9"
-numpy = ">=1.20.0"
-scikit-learn = ">=0.24.0"
-MDAnalysis = ">=2.0.0"
-ShapeGMM = ">=1.0.0"
-torch = ">=1.8.0"
+[project.urls]
+Homepage = "https://github.com/mqcomplab/MDANCE"
+Issues = "https://github.com/mqcomplab/MDANCE/issues"
