--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "MDANCE"
-version = "0.1.8"
+version = "0.1.9"
 authors = [
   { name="Lexin Chen", email="le.chen@ufl.edu" },
 ]
@@ -26,4 +26,4 @@ Issues = "https://github.com/mqcomplab/MDANCE/issues"
 
 [project.scripts]
 prime_sim = "mdance.cli.prime_sim:main"
-prime_rep = "mdance.cli.mdance:main"
+prime_rep = "mdance.cli.prime_rep:main"
