--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -28,5 +28,10 @@ sphinx:
 # to build your documentation
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
-   install:
-   - requirements: docs/requirements.txt
+  version: 3.8
+  install:
+    - method: pip
+      path: .
+
+conda:
+  environment: docs/requirements.yaml
