--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
+requires = ["setuptools>=64", "versioneer[toml]", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -37,12 +37,9 @@ prime_rep = "mdance.cli.prime_rep:main"
 [tool.setuptools.package-data]
 "mdance.data" = ["*.csv", "*.npy", "*.pdb", "*.dcd"]
 
-[tool.setuptools]
-zip-safe = true
-include-package-data = true
-
-[tool.setuptools.packages.find]
-exclude = ["docs", "examples", "scripts", "tests", "tutorials"]
-
-[tool.setuptools_scm]
-version_file = "src/mdance/_version.py"
+[tool.versioneer]
+VCS = "git"
+style = "pep440"
+versionfile_source = "src/mdance/_version.py"
+versionfile_build = "src/mdance/_version.py"
+tag_prefix = ""
