Revised correct omit path for `setup.cfg`.

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ omit =
     # Omit the tests
     */tests/*
     # Omit generated versioneer
-    ensemble_md/_version.py
+    mdance/_version.py
 parallel = True
 
 [yapf]
@@ -21,4 +21,3 @@ max-line-length = 119
 
 [aliases]
 test = pytest
-
