--- a/setup.cfg
+++ b/setup.cfg
@@ -21,3 +21,11 @@ max-line-length = 119
 
 [aliases]
 test = pytest
+
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = src/mdance/_version.py
+versionfile_build = mdance/_version.py
+tag_prefix = ''
+parentdir_prefix = mdance-
