--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [3.10]
+        python-version: [3.9, 3.10]
 
     steps:
       - name: Check out repository
@@ -34,7 +34,7 @@ jobs:
       - name: Install project and dev dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -e ".[dev]"
+          pip install .[dev]
 
       - name: Run tests with pytest
         run: pytest
