--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,8 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [3.9, 3.10]
-
+        python-version: ["3.9", "3.10"]
+        
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
