fix: update dependencies version in pyproject.toml
ShapeGMMTorch created a new version and it became incompatible with MDANCE so we are strictly sticking with 1.0.0 until otherwise.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
   "numpy >= 1.20.0",
   "scikit-learn >= 0.24.0",
   "MDAnalysis >= 2.0.0",
-  "shapeGMMTorch >= 1.0.0",
+  "shapeGMMTorch == 1.0.0",
   "torch >= 2.2.2",
 ]
 
